--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <scm>
+        <url>https://github.com/IdeaUniverse/mybatis-pagination</url>
+        <connection>https://github.com/IdeaUniverse/mybatis-pagination.git</connection>
+        <developerConnection>https://github.com/IdeaUniverse/mybatis-pagination</developerConnection>
+    </scm>
+
     <dependencies>
 
         <!-- MyBatis -->
@@ -28,4 +34,16 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>IdeaUniverse</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>IdeaUniverse</id>
+            <name>Nexus Release Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
