--- a/mybatis-pagination-demo/pom.xml
+++ b/mybatis-pagination-demo/pom.xml
@@ -46,8 +46,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mybatispagination</groupId>
-			<artifactId>mybatispagination</artifactId>
+			<groupId>com.github.IdeaUniverse</groupId>
+			<artifactId>mybatis-pagination</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
