--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mybatispagination</groupId>
-    <artifactId>mybatispagination</artifactId>
+    <groupId>com.github.IdeaUniverse</groupId>
+    <artifactId>mybatis-pagination</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
