--- a/mybatis-pagination-demo/pom.xml
+++ b/mybatis-pagination-demo/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>com.github.IdeaUniverse</groupId>
 			<artifactId>mybatis-pagination</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.2-RELEASE</version>
 		</dependency>
 
 		<dependency>
