--- a/mybatis-pagination-demo/pom.xml
+++ b/mybatis-pagination-demo/pom.xml
@@ -15,7 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -35,20 +35,26 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.9</version>
+			<version>1.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- MyBatis -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
+			<version>2.1.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.IdeaUniverse</groupId>
 			<artifactId>mybatis-pagination</artifactId>
-			<version>1.0.5-RELEASE</version>
+			<version>1.0.8-RELEASE</version>
 		</dependency>
 
 		<dependency>
